--- a/package.json
+++ b/package.json
@@ -55,11 +55,16 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "2.0.0",
+    "@sendgrid/mail": "^6.3.1",
     "body-parser": "1.18.3",
+    "dotenv": "^6.2.0",
     "express": "4.16.4",
+    "express-session": "^1.15.6",
     "lodash": "4.17.11",
     "mysql": "2.16.0",
     "nconf": "0.10.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0",
     "prompt": "1.0.0",
     "pug": "^2.0.3",
     "uglify-js": "3.4.9"
