--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@google-cloud/datastore": "2.0.0",
     "@sendgrid/mail": "^6.3.1",
     "body-parser": "1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "4.16.4",
     "express-session": "^1.15.6",
