--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^1.0.0",
     "express-session": "^1.15.6",
+    "jwks-rsa": "^1.3.0",
     "lodash": "4.17.11",
     "mysql": "2.16.0",
     "nconf": "0.10.0",
