--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "repo-tools test app && ava -t 30s --tap test/*.test.js",
     "e2e": "repo-tools test deploy && E2E_TESTS=True ava -t 30s --tap test/*.test.js",
     "cover": "nyc --cache npm test; nyc report --reporter=html",
-    "init-cloudsql": "node books/model-cloudsql.js"
+    "init-cloudsql": "node books/model-cloudsql.js",
+    "dev": "nodemon index.js"
   },
   "author": "Google Inc.",
   "contributors": [
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^2.3.5",
     "ava": "0.25.0",
+    "nodemon": "^1.18.9",
     "proxyquire": "2.1.0",
     "sinon": "^7.2.2"
   },
