--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lodash": "4.17.11",
     "mysql": "2.16.0",
     "nconf": "0.10.0",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "passport-auth0": "^1.1.0",
     "prompt": "1.0.0",
